--- a/Basiswebsite-thomasvdl-203/styles/style.css
+++ b/Basiswebsite-thomasvdl-203/styles/style.css
@@ -1,5 +1,162 @@
-/* CSS Document */
-*, *::after, *::before {
-  box-sizing:border-box;  
+/* :root {
+  --primaty-color: rgb(255 255 255);
+  --secondary-color: rgb(60 62 67);
 }
+
+p{
+  font-size: 1em;
+}
+
+body{
+  background-color: cornflowerblue;
+  text-align: center;
+}
+
+footer:first-of-type{
+  position: fixed;
+  background-color: var(--primaty-color) ;
+}
+
+header nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  background-color: transparent;
+  width: 100%;
+  top: 0;
+  box-shadow: 0px 0px 20px -10px black;
+  position: fixed;
+  margin: 0;
+  background-color: white;
+}
+
+header nav img{
+  width: 150px;
+  margin-left: -10px;
+}
+
+h1{
+  color: var(--h1-color);
+  font-size: 40px;
+}
+
+body {
+  margin: 0;
+}
+
+section {
+  font-family: sans-serif;
+  min-height: 100vh;
+  background: yellow;
+  padding-top: 150px;
+  margin: 0px;
+}
+
+section:last-of-type {
+  font-family: sans-serif;
+  min-height: 100vh;
+  background: blue;
+  padding-top: 150px;
+  margin: 0px;
+}
+*/
+
+:root {
+  --primaty-color: rgb(255 255 255);
+  --secondary-color: rgb(60 62 67);
+}
+
+p{
+  font-size: 1em;
+}
+
+body{
+  background-color: cornflowerblue;
+  text-align: center;
+}
+
+footer:first-of-type{
+  position: fixed;
+  background-color: var(--primaty-color) ;
+}
+
+header nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  background-color: transparent;
+  width: 100%;
+  top: 0;
+  box-shadow: 0px 0px 20px -10px black;
+  position: fixed;
+  margin: 0;
+  background-color: transparent;
+}
+
+header nav img{
+  width: 150px;
+  margin-left: -10px;
+}
+
+h1{
+  color: var(--h1-color);
+  font-size: 40px;
+}
+
+body {
+  margin: 0;
+}
+
+#button{
+  margin: 3px;
+}
+
+#button:first-of-type{
+  margin-top: 30px;
+}
+
+#model-3 a p{
+  align-items: center;
+  margin: auto;
+  width: 90%;
+}
+
+#button p{
+  background-color: var(--secondary-color);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 50px;
+  color: var(--primaty-color);
+  font-size: 0.9em;
+  text-transform: uppercase;
+  transform-style: none;
+} 
+
+#wrapper {
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  width: 375px;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+  scroll-snap-align: start;
+  padding-top: 80px;
+}
+
+#model-s{
+  background-color: blue;
+}
+
+#model-3{
+  background-color: yellow;
+}
+
+#model-X{
+  background-color: green;
+}
+
 
