--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,20 @@
   --secondary-color: rgb(60 62 67);
 }
 
+/* -_-_-_-_-_-_-_-_ GENERAL -_-_-_-_-_-_-_-_ */
+
 body{
   text-align: center;
   margin: auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.home main{
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  /* https://css-tricks.com/practical-css-scroll-snapping/ */
 }
 
 p{
@@ -16,26 +26,24 @@ p{
   letter-spacing: 0.04em;
 }
 
-#footer-header{
+/* -_-_-_-_-_-_-_-_ HEADER -_-_-_-_-_-_-_-_ */
+
+header{
   position: fixed;
   width: 100%;
 }
 
-footer{
-  background-color: var(--primary-color);
-  padding: 2px 0px;
-}
-
-header button{
-  background-color: grey;
-  padding: 8px;
-}
-
-header nav ul{
+header nav ul:first-of-type{
   display: flex;
   list-style: none;
   margin: auto;
   justify-content: space-between;
+}
+
+header ul:first-of-type li:last-of-type{
+  margin-top: 15px;
+  margin-right: 10px;
+  opacity: 0.5;
 }
 
 header nav img{
@@ -43,12 +51,45 @@ header nav img{
   margin: -16px -35px ;
 }
 
-main{
-  width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
+header button{
+  background-color: grey;
+  color: black;
+  padding: 8px;
+  border-radius: 30px;
+  border: none;
+  padding: 8px 18px;
 }
+
+/* ------ menu ------ */
+
+header ul:last-of-type{
+  display: none;
+}
+
+header ul.show{
+  display: unset;
+  background-color: yellow;
+  position: absolute;
+
+}
+
+header ul.show li{
+  display: flex;
+  padding: 10px;
+  background-color: var(--primary-color);
+  width: 18em;
+  margin-top: 0px;
+  padding-left: 40px;
+  padding-right: 400px;
+}
+
+
+header ul.show li:first-of-type{
+  padding-top: 85px;
+  margin-top: -90px;
+}
+
+/* -_-_-_-_-_-_-_-_ GENERAL SECTION -_-_-_-_-_-_-_-_ */
 
 section{
   width: 100%;
@@ -57,155 +98,306 @@ section{
   padding-top: 0px;
 }
 
-section h1{
+.home section h1{
   color: var(--h1-color);
   font-size: 35px;
   font-weight: 500;
   color: var(--secondary-color);
   padding-top: 130px;
+  margin: 0;
 }
 
-section a p{
-  font: none;
+/* -_-_-_-_-_-_-_-_ CTA BUTTONS -_-_-_-_-_-_-_-_ */
+
+#buttons a{
+  display: inline-block;
+  width: 90%;
+  text-decoration: none;   
 }
 
-
-section a:nth-of-type(2) p{
-  background-color: var(--primary-color);
-  color: black;
-  padding: 10px;
-  width: 85%;
+#buttons a p{
+  padding: 11px;    
   margin: auto;
   border-radius: 50px;
   text-transform: uppercase;
+}
+
+#buttons a:nth-of-type(1) p{
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  margin-top: 330px;
+}
+
+#buttons a:nth-of-type(2) p{
+  background-color: var(--primary-color);
+  background-color: yellow;
+  color: black;
   opacity: 0.7;
-  margin-top: 17px;
+  margin-top: 20px;
 }
 
-section a:nth-of-type(2){
-  text-decoration: none;
-}
+/* -_-_-_-_-_-_-_-_ MODEL 3 -_-_-_-_-_-_-_-_ */
 
-
-/* --------------- model 3 ------------------ */
-
-section:first-of-type{
+.home section:first-of-type{
   background-image: url(../img/Tekengebied\ 2.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: cornflowerblue;
+  
 }
 
-section:first-of-type a:first-of-type p{
-  margin-top: -30px;
-}
+/* -_-_-_-_-_-_-_-_ MODEL Y -_-_-_-_-_-_-_-_ */
 
-section a:nth-of-type(1) p{
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-  padding: 10px;
-  width: 85%;
-  margin: auto;
-  border-radius: 50px;
-  text-transform: uppercase;
-}
-
-section:nth-of-type(1) a:first-of-type p{
-  background-color: transparent;
-  padding: 0;
-  border-radius: 0;
-  color: var(--secondary-color);
-  margin-bottom: 345px;
-}
-
-section:nth-of-type(1) a:first-of-type p:first-of-type{
-  text-transform: none;
-}
-
-section:first-of-type a:nth-of-type(3) p{
-  background-color: var(--primary-color);
-  color: black;
-  padding: 10px;
-  width: 84%;
-  margin: auto;
-  border-radius: 50px;
-  text-transform: uppercase;
-  text-decoration: none;
-  margin-top: 17px;
-  opacity: 0.7;
-}
-
-section:first-of-type a:nth-of-type(2){
-  text-decoration: none;
-}
-
-section:first-of-type a:nth-of-type(2) p{
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-  padding: 10px;
-  width: 84%;
-  margin: auto;
-  border-radius: 50px;
-  text-transform: uppercase;
-  opacity: 1;
-}
-
-section:first-of-type a:nth-of-type(3){
-  text-decoration: none;
-}
-
-section:first-of-type a:nth-of-type(4) p{
-  margin-top: 30px;
-  text-decoration: none;
-}
-
-/* --------------- model Y ------------------ */
-
-section:nth-of-type(2){
+.home section:nth-of-type(2){
   background-image:url(../img/modelx.png);
-  background-color: ;
-}
-
-section:nth-of-type(2) a:first-of-type p{
-  margin-top: 370px;
+  background-color: purple;
 }
 
 
-/* --------------- model S ------------------ */
+/* -_-_-_-_-_-_-_-_ MODEL S -_-_-_-_-_-_-_-_ */
 
-section:nth-of-type(3){
+.home section:nth-of-type(3){
   background-color: transparent;
   background-image: url(../img/background-s.gif);
-  background-repeat: no-repeat;
+  background-color: blue;
 }
 
-section:nth-of-type(3) a:first-of-type p{
-  margin-top: 380px;
-}
 
-/* --------------- model X ------------------ */
 
-section:nth-of-type(4){
+/* -_-_-_-_-_-_-_-_ MODEL X -_-_-_-_-_-_-_-_ */
+
+.home section:nth-of-type(4){
   background-image: url(../img/modelx.png);
   background-color: green;
 }
 
-section:nth-of-type(4) a:first-of-type p{
-  margin-top: 380px;
+
+/* -_-_-_-_-_-_-_-_ SOLAR EN POWERWALL -_-_-_-_-_-_-_-_ */
+
+.home section:nth-of-type(5){
+  background-image:url(../img/model-y.jpg);
+  background-color: red;
 }
 
-/* --------------- model Solar en Powerwall ------------------ */
+section:nth-of-type(5) a{
+  margin: auto;
+}
+   
+/* -_-_-_-_-_-_-_-_ ACCESSOIRES -_-_-_-_-_-_-_-_ */
 
-section:nth-of-type(5){
-  background-image:url(../img/model-y.jpg)
+section:nth-of-type(6) a{
+  margin: auto;
 }
 
-section:nth-of-type(5) h1{
-  font-size: 1.6em;
+/* -_-_-_-_-_-_-_-_ FOOTER -_-_-_-_-_-_-_-_ */
+
+footer ul{
+  list-style: none;
+  margin-top: -8.1em;
+  margin-left: -3em;
 }
 
-section:nth-of-type(5) p:first-of-type{
+footer ul li{
+margin-top: 0.5em;
 }
 
 
-/* --------------- model Accessoires ------------------ */
 
 
 
+/* -_-_-_-_-_-_-_-_ RESPONSIVENESS -_-_-_-_-_-_-_-_ */
+
+@media (min-width: 40em) {
+  section h1{
+    font-size: 2.5em;
+  }
+
+  #buttons {
+    display: flex; 
+    width: 40em;
+    margin: auto;
+    margin-top: 30em;
+  }
+
+  #buttons a p{
+    font-size: 1em;    
+  }
+
+  
+
+  #buttons a:nth-of-type(1) p{
+    margin-top: 0;
+    margin-right: 1em;
+  }
+  
+  #buttons a:nth-of-type(2) p{
+    margin-top: 0;
+    margin-left: 1em;
+  }
+}
+
+
+@media (min-width: 80em) {
+  header nav{
+    display: flex;
+    max-width: 90%;
+    margin: auto;
+  }
+
+  header nav ul:first-of-type{
+    margin-left: 0;
+  }
+
+  header ul:first-of-type li:last-of-type{
+    display: none;
+  }
+
+  header ul:last-of-type{
+    display: flex;
+  }
+
+  header nav ul:last-of-type li{
+    display: flex;
+    margin-left: 2em;
+  }
+
+  header nav ul:last-of-type li:hover{
+    font-weight: bolder;
+  }
+
+  footer ul{
+    display: flex;
+    max-width: 40%;
+    justify-content: space-between;
+    margin: auto;
+
+  }
+  
+  footer ul li{
+    margin-top: -3.1em;
+  }
+}
+
+
+
+
+
+
+/* ////////////////////// CYBERTRUCK ////////////////////// */
+
+
+/* -_-_-_-_-_-_-_-_ SECTION 1 -_-_-_-_-_-_-_-_ */
+
+
+.cybertruck header img:first-of-type{
+  filter: invert(100%); 
+}
+
+.cybertruck header button{
+  color: var(--primary-color);
+}
+
+.cybertruck section:first-of-type{
+  background-image: url(../img/);
+  background-color: cornflowerblue;
+  padding-top: 0.1em;
+}
+
+.cybertruck h1{
+  width: 85%;
+  color: var(--primary-color);
+  text-align: left;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-weight: normal;
+  margin: 0.9em auto;
+}
+
+.cybertruck h2{
+  width: 85%;
+  color: rgb(190 190 190);
+  text-align: left;
+  font-size: 0.9em;
+  line-height: 1.5em;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-weight: normal;
+  margin: 0.9em auto;
+}
+
+.cybertruck section p{
+  width: 85%;
+  margin: auto;
+  color: rgb(190 190 190);
+  line-height: 1.5em;
+  letter-spacing: 0.15em;
+  font-weight: lighter;
+  text-align: left;
+  margin-bottom: 2em;
+}
+
+.cybertruck section:first-of-type a{
+  text-decoration: none;
+  text-align: center;
+}
+
+.cybertruck section:first-of-type > p{
+  color: white;
+  font-size: 0.9em;
+  width: 85%;
+  margin: auto;
+  text-transform: uppercase;
+  text-shadow: 0 0 5px #FFFFFF, 1px 1px 1px rgba(206,206,206,0);
+  /* https://cssgenerator.org/box-shadow-css-generator.html */
+  display: block;
+  margin: auto;
+  margin-top: 45em;
+  line-height: 1.5em;
+  letter-spacing: 0.15em;
+  text-align: center;
+}
+
+.cybertruck section:first-of-type a p{
+  display: block;
+  margin: auto;
+  margin-top: 2em;
+  padding: 0.3em;
+  border: solid;
+  border-width: 0.3em;
+  border-color: var(--primary-color);
+  width: 85%;
+  text-decoration: none;
+  line-height: 1.5em;
+  letter-spacing: 0.15em;
+  font-size: 0.9em;
+  color: var(--primary-color);
+  text-align: center;
+}
+
+
+/* -_-_-_-_-_-_-_-_ SECTION 2 -_-_-_-_-_-_-_-_ */
+
+.cybertruck section:nth-of-type(2){
+  background-image: url(../img/);
+  background-color: black;
+  height: auto;
+}
+
+.cybertruck section:nth-of-type(2) article img{
+  max-width: 100%;
+}
+
+.cybertruck section:nth-of-type(2) article img:first-of-type{
+  margin-top: 3em;
+}
+
+
+.cybertruck section:nth-of-type(2) article img:first-of-type{
+  margin-top: 3em;
+}
+
+.cybertruck section:nth-of-type(2) p:last-of-type{
+  padding-bottom: 5em;
+}
